Add check client
