# lib/domain/entities/client.go
@@ -2,7 +2,7 @@ package entities
 
 // Client example
 type Client struct {
-	Id     int    `json:"id" example:"1"`
-	Name   string `json:"name" example:"Mobile Client"`
-	Secret string `json:"secret" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOiIyMDIzLTEwLTIzVDEwOjU0OjUwLjQ4OTg0MiswNzowMCJ9.vl8apKYm9UQbj1qaG-BB2eStTEYy1ZJpPoVyuoXDr1k"`
+	Id     int    `json:"id,omitempty" example:"1"`
+	Name   string `json:"name,omitempty" example:"Mobile Client"`
+	Secret string `json:"secret,omitempty" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOiIyMDIzLTEwLTIzVDEwOjU0OjUwLjQ4OTg0MiswNzowMCJ9.vl8apKYm9UQbj1qaG-BB2eStTEYy1ZJpPoVyuoXDr1k"`
 }
